# lexico

./: .gitmodules  Makefile  README.md
dictionary/: .gitignore  Makefile  README.md  pyproject.toml
dictionary/examples/: accentless_example.py  create_words_example.py  dictionary_example.py  extract_phrases_example.py  lemma_ranking_example.py  lemmas_example.py  orm_example.py  translations_example.py  word_cards_example.py  word_ranking_example.py  words_example.py
dictionary/src/dictionary/: accentless.py  config.py  data_types.py  dictionary.py  lemma_ranking.py  lemmas.py  orm.py  phrases.py  sentence_phrases.py  translations.py  utils.py  word_cards.py  word_ranking.py  words.py
scripts/: publish-phrases.sh
tauriapp/: README.md  create_sign_key.sh  package-lock.json  package.json  sign_apk.sh  web
tauriapp/src-tauri/: Cargo.toml  tauri.conf.json
tauriapp/src-tauri/icons/: icon.icns
ui/: README.md  dictionary.py  next.config.ts  package-lock.json  package.json
ui/.cursor/rules/: css-class-names.mdc
ui/src/app/: StoreProvider.tsx  globals.css  layout.tsx  page.module.css  page.tsx
ui/src/app/article/: page.tsx
ui/src/app/dictionary/: page.module.css  (+1 more)
ui/src/components/: Common.module.css  CurrentArticleIndex.tsx  LemmaLink.module.css  LemmaLink.tsx  MenuButton.module.css  MenuButton.tsx  ThemeButton.module.css  ThemeButton.tsx
ui/src/domain/: Dictionary.ts  Phrases.ts  Queues.ts  StoredDictionary.ts  dictionary.ts  queues.ts  storages.ts  utils.ts
ui/src/hooks/: useInitializeState.ts
ui/src/redux_state/: currentArticleSlice.ts  store.ts
(+43 files in other folders)
