[project]
name = "dictionary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Egor Kalinin", email = "egorsinbox@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
]

[project.scripts]
dictionary = "dictionary:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.8.0",
]
